# Quay

./: .dockerignore  .env.example  .gitignore  AGENT_GUIDE.md  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  NOTICE  README.en.md  README.md  SECURITY.md  USER_GUIDE.md  docker-compose.yml  docker-entrypoint.sh  lzc-build.yml  lzc-manifest.yml  package.yml  pyproject.toml
.github/workflows/: ci.yml
config/: connections.docker.yaml  connections.example.yaml
scripts/: build-app.sh  dbm-serve.sh  demo_seed.py  e2e_multi_statement.py  e2e_serial_cancel.py  e2e_ssh_multihop.sh  e2e_ssh_multihop_percert.sh  install-launchd.sh
src/dbmcp/: __init__.py  __main__.py  admin.py  agent_format.py  ai.py  analysis.py  approvals.py  config.py  connections.py  engines.py  examples.py  export.py  health.py  inbox.py  jobs.py  masking.py  metadata.py  notify.py  probe.py  redis_docs.py  redis_engine.py  secrets.py  server.py  service.py  settings.py  snippets.py  tunnel.py  workflows.py
src/dbmcp/audit/: classify.py  log.py  redis_rules.py  risk.py
src/dbmcp/static/: admin-chrome.css  admin-doc.css  admin.js  console.css  console.js  redis.css  redis.js  sqlfuncs.js
tests/: conftest.py  test_admin.py  test_admin_notify.py  test_admin_security.py  test_agent_format.py  test_ai.py  test_analysis.py  test_approvals.py  test_classify.py  test_clickhouse.py  test_config.py  test_connections.py  test_elicitation.py  test_engines.py  test_example_workflow.py  test_export.py  test_file_secret.py  test_health.py  test_housekeeping.py  test_inbox.py  test_ingress_auth.py  test_jobs.py  test_masking.py  test_metadata.py  test_notify.py  test_probe.py  test_redis_console.py  test_redis_docs.py  test_redis_engine.py  test_redis_rules.py  test_risk.py  test_secrets.py  test_service.py  test_settings.py  test_snippets.py  test_tunnel.py
