[project]
name = "db-manage-mcp"
version = "0.1.0"
description = "为 agent 提供数据库访问的 MCP 服务：连接管理、SQL 审计、人工授权、操作审计"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "psycopg[binary]>=3.1",
    "sqlglot>=25.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "redis>=5.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
keyring = ["keyring>=25.0"]

[project.scripts]
dbm = "dbmcp.__main__:main"

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
